2006-08-28  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline
	2006-03-02  Ben Elliston  <bje@au.ibm.com>
	* mklibgcc.in: Depend on config/dfp-bit.h in rules that compile
	config/dfp-bit.c.

	Backport from mainline
	2006-03-01  Ben Elliston  <bje@au.ibm.com>
	* config.gcc: Add t-dfprules to $tmake_file for powerpc-*-linux*
	and powerpc64-*-linux* configurations.
	* config/t-dfprules: New file.

	Backport from mainline
	2006-03-01  Ben Elliston  <bje@au.ibm.com>
	* mklibgcc.in: Add logic to handle $DFP_ENABLE and $DFP_CFLAGS.
	Compile dfp-bit.c from the source directory using -DWIDTH and
	$DFP_CFLAGS to control the compilation of that file, rather than
	generating width-specific versions in the build directory.
	* Makefile.in (libgcc.mk): Pass down DFP_ENABLE and DFP_CFLAGS.
	(LIBGCC_DEPS): Replace $(D32PBIT) et al with config/dfp-bit.[hc].

	Backport from mainline
	2006-02-07  Ben Elliston  <bje@au.ibm.com>
	* config/i386/i386.c (ix86_scalar_mode_supported_p): New.
	(TARGET_SCALAR_MODE_SUPPORTED_P): Define hook.
	(classify_argument): Handle SDmode, DDmode, TDmode for 64-bit.
	(ix86_return_in_memory): Handle TDmode.
	(ix86_libcall_value): Handle SDmode, DDmode, TDmode.
	(ix86_value_regno): Return non-TDmode decimal float modes in %eax.

	Backport from mainline
	2006-02-06  Ben Elliston  <bje@au.ibm.com>
	* configure.ac: Unconditionally disable decimal float by default.
	* configure: Regenerate.

	Backport from mainline
	2006-02-04  Ben Elliston  <bje@au.ibm.com>
	* dfp.c (decimal_real_arithmetic): Change second argument type
	from int to enum tree_code. Do not always return true, but now
	return result of any call to decimal_do helper functions.
	* dfp.h (decimal_real_arithmetic): Update prototype.

	Backport from mainline
	2006-01-25  Ben Elliston  <bje@au.ibm.com>
	* dfp.c (dfp_byte_swap): Use uint32_t and not unsigned long.

	Backport from mainline
	2006-01-21  Ben Elliston  <bje@au.ibm.com>
	* varasm.c (assemble_real): Initialise data array.
