@@ -426,11 +426,9 @@ typedef unsigned int USItype __attribute__ ((mode (SI)));
 typedef unsigned int UDItype __attribute__ ((mode (DI)));
 
 /* The type of the result of a decimal float comparison.  This must
-   match `word_mode' in GCC for the target.  Default to SItype.  */
+   match `word_mode' in GCC for the target.  */
 
-#ifndef CMPtype
-#define CMPtype SItype
-#endif
+typedef int CMPtype __attribute__ ((mode (word)));
 
 /* Prototypes.  */
 
